[package]
name = "mtras_workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",

] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.3.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = { version = "0.4.0" }
defmt = "0.3.10"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
smart-leds = "0.4.0"
heapless = { version = "0.8", features = ["serde"] }
usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
log = "0.4.25"
pio-proc = "0.2"
pio = "0.2.1"
rp2040-panic-usb-boot = { git = "https://github.com/9names/rp2040-panic-usb-boot.git", branch = "feat/remove_hal_deps" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"

[patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "8803128707b8bd9fc9dcea392a62dfd42aa822d2" }
